horizontal scrolling fixed

--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -15,14 +15,14 @@
 .cover__main {
     position: absolute;
     top: 0;
-    bottom: 0;
-    left: 0;
     right: 0;
+    height: -webkit-fill-available;
+    width: -webkit-fill-available;
     z-index: 1;
     padding: 105px 48px 0 48px;
 }
 
-.cover__text{
+.cover__text {
     display: flex;
     flex-flow: column;
     justify-content: center;
